--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                 <div class="project-card">
                     <img src="images/titanic.jpg" alt="專案 2 圖片">
                     <h3>鐵達尼存活預測</h3>
-                    <p>使用 logistic Regression、 Random Forest、 XGBoost 預測是否存活，最後使用DNN(深度神經網絡)看看是否能增加分類能力。</p>
+                    <p>使用 Logistic Regression、 Random Forest、 XGBoost 預測是否存活，最後使用DNN(深度神經網絡)看看是否能增加分類能力。</p>
                     <a href="https://github.com/adsf98171/Portfolio/blob/main/Titanic_prediction.ipynb" target="_blank">查看程式碼</a>
 					<br> <!-- 加入一個換行 -->
                     <a href="project_explanation_2.html" target="_blank">查看詳細解釋</a>
@@ -234,10 +234,12 @@
 
             <!-- 專案 3 -->
                 <div class="project-card">
-                    <img src="images/project3.jpg" alt="專案 3 圖片">
-                    <h3>Chatbot 智能對話系統</h3>
-                    <p>微調大型語言模型 (LLM)，開發具備自動回應功能的聊天機器人。</p>
+                    <img src="images/GPT.jpg" alt="專案 3 圖片">
+                    <h3>生成式AI</h3>
+                    <p>微調(fine-tune)大型語言模型 (LLM)，並且結合RAG，嘗試開發擁有專業能力的生成式AI。</p>
                     <a href="https://github.com/你的GitHub帳號/聊天機器人" target="_blank">查看程式碼</a>
+					<br> <!-- 加入一個換行 -->
+                    <a href="project_explanation_3.html" target="_blank">查看詳細解釋</a>
                 </div>
             </div>
         </div>
