--- a/project_explanation_3.html
+++ b/project_explanation_3.html
@@ -165,7 +165,7 @@
 			<br>
 			
             <h3>結論</h3>
-            <p>這個專案，展示了如何如何微調一個GPT-2模型，讓它可以回答更專業的問題。以這個問題來說，我們仍需要'術語校對'和'數學嚴謹性強化'，進一步提升回答品質。我認為應該優先修正訓練數據中的技術表答(錯誤 vs 正確的對照樣本)。</p>
+            <p>這個專案，展示了如何微調一個GPT-2模型，讓它可以回答更專業的問題。以這個問題來說，我們仍需要'術語校對'和'數學嚴謹性強化'，進一步提升回答品質。我認為應該優先修正訓練數據中的技術表答(錯誤 vs 正確的對照樣本)。</p>
         </section>
     </div>
 
