--- a/index.html
+++ b/index.html
@@ -224,12 +224,14 @@
                     <a href="project_explanation_2.html" target="_blank">查看詳細解釋</a>
                 </div>
 
-            <!-- 專案 3 -->
+            <!-- 專案 4 -->
                 <div class="project-card">
-                    <img src="images/project3.jpg" alt="專案 3 圖片">
-                    <h3>工廠數據分析儀表板</h3>
-                    <p>開發一個基於 Flask 的網頁應用，讓產線即時監測機台數據。</p>
+                    <img src="images/finace.jpg" alt="專案 4 圖片">
+                    <h3>台積電資料爬蟲與預測</h3>
+                    <p>開發一個基於 yfinace 的網頁應用，即時監測台積電股票的漲跌與預測未來的行為。</p>
                     <a href="https://github.com/你的GitHub帳號/工廠儀表板" target="_blank">查看程式碼</a>
+				    <br> <!-- 加入一個換行 -->
+                    <a href="project_explanation_4.html" target="_blank">查看詳細解釋</a>
                 </div>
 
             <!-- 專案 3 -->
