--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                     <img src="images/finace.jpg" alt="專案 4 圖片">
                     <h3>台積電資料爬蟲與預測</h3>
                     <p>開發一個基於 yfinace 的網頁應用，即時監測台積電股票的漲跌與預測未來的行為。</p>
-                    <a href="https://github.com/你的GitHub帳號/工廠儀表板" target="_blank">查看程式碼</a>
+                    <a href="https://adsf98171.github.io/Self_Stock_Website/" target="_blank">查看程式碼</a>
 				    <br> <!-- 加入一個換行 -->
                     <a href="project_explanation_4.html" target="_blank">查看詳細解釋</a>
                 </div>
