--- a/project_explanation_4.html
+++ b/project_explanation_4.html
@@ -20,6 +20,7 @@
 	
     <header class="header">
         <h1 style="text-align: center;">資料爬蟲與預測詳解</h1>
+	<p style="text-align: center";>(本篇訓練模型的步驟在PC上，所以並不會在網頁顯示)</p>
     </header>
 
     <div class="container">
