--- a/index.html
+++ b/index.html
@@ -269,20 +269,20 @@
         <div class="container">
             <h2>留言板</h2>
             <div class="message-form-container">
-                <form action="https://formspree.io/f/您的formspree代碼" method="POST" class="message-form">
+                <form action="https://formspree.io/f/xqapwkzn" method="POST" class="message-form">
                     <div class="form-group">
-                        <label for="name">姓名</label>
+                        <label for="name">Your name: </label>
                         <input type="text" id="name" name="name" required>
                     </div>
                     <div class="form-group">
-                        <label for="email">Email</label>
+                        <label for="email">Your email: </label>
                         <input type="email" id="email" name="email" required>
                     </div>
                     <div class="form-group">
-                        <label for="message">留言內容</label>
+                        <label for="message">Your message: </label>
                         <textarea id="message" name="message" rows="5" required></textarea>
                     </div>
-                    <button type="submit" class="submit-btn">送出留言</button>
+                    <button type="submit" class="submit-btn">Send</button>
                 </form>
             </div>
         </div>
