--- a/index.html
+++ b/index.html
@@ -268,6 +268,7 @@
     <section id="message" class="section">
         <div class="container">
             <h2>留言板</h2>
+	    <p style="text-align: center;">(有問題歡迎留言，訊息將會發送到我的email)</p>
             <div class="message-form-container">
                 <form action="https://formspree.io/f/xqapwkzn" method="POST" class="message-form">
                     <div class="form-group">
