--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                 <div class="project-card">
                     <img src="images/finace.jpg" alt="專案 4 圖片">
                     <h3>台積電資料爬蟲與預測</h3>
-                    <p>開發一個基於 yfinace 的網頁應用，即時監測台積電股票的漲跌與預測未來的行為。</p>
+                    <p>開發一個基於 yfinace 的網頁應用，每日監測台積電股票的漲跌與預測未來的行為(因為Github流量限制，只在每天18:00更新)。</p>
                     <a href="https://adsf98171.github.io/Self_Stock_Website/" target="_blank">查看網頁</a>
 				    <br> <!-- 加入一個換行 -->
                     <a href="project_explanation_4.html" target="_blank">查看詳細解釋</a>
