--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                     <a href="project_explanation_1.html" target="_blank">查看詳細解釋</a>
                 </div>
 				
-				<!-- 專案 2 -->
+		<!-- 專案 2 -->
                 <div class="project-card">
                     <img src="images/titanic.jpg" alt="專案 2 圖片">
                     <h3>鐵達尼存活預測</h3>
@@ -224,7 +224,17 @@
                     <a href="project_explanation_2.html" target="_blank">查看詳細解釋</a>
                 </div>
 
-            <!-- 專案 4 -->
+	        <!-- 專案 5 -->
+                <div class="project-card">
+                    <img src="images/insurance.jpg" alt="專案 5 圖片">
+                    <h3>混合型分配應用(I): 在保險理賠建模中，從理論到風險定價。</h3>
+                    <p>本篇比較偏理論，內容是: 使用混合型分配解決保單右設限與自負額的理賠建模問題，並計算合理保費。</p>
+                    <a href="https://github.com/adsf98171/Portfolio/blob/main/Fine_tuning_a_LLM_3.ipynb" target="_blank">查看程式碼</a>
+					<br> <!-- 加入一個換行 -->
+                    <a href="project_explanation_5.html" target="_blank">查看詳細解釋</a>
+                </div>
+
+                <!-- 專案 4 -->
                 <div class="project-card">
                     <img src="images/finace.jpg" alt="專案 4 圖片">
                     <h3>台積電資料爬蟲與預測</h3>
