--- a/project_explanation_5.html
+++ b/project_explanation_5.html
@@ -124,8 +124,15 @@
  			<figcaption>(圖九) Boostrap KS test</figcaption>
 			</figure>
             <br>
-			<p>最後，因為p-value明顯夠大，我們<strong>接受H0: 我們一開始的data 服從一個Pareto(2,50)的分配</strong>。</p>
+			<p>因為p-value明顯夠大，我們<strong>接受H0: 我們一開始的data 服從一個Pareto(2,50)的分配</strong>。</p>
 			<br>
+			<p>最後，這張圖可以表示我們一開始的data在模擬的data裡有多極端? p-value = P(D* > D_obs|H0)就是在講這件事...</p>
+			<br>
+			<figure>
+			<img src="images/p19.png" alt="feature importance" width="500" height="400">
+ 			<figcaption>(圖十) Boostrap KS test histgram</figcaption>
+			</figure>
+            <br>
 			<p>接下來才要進入主題，為了要規劃保險金額，首先我們要算出賠償金額的期望值E(Y)，那我們得要有Y的pdf...</p>
 			<br>
 			
@@ -134,8 +141,8 @@
 			<h4>1. 我們有顧客損失(X)的pdf，但保險給付(Y)的我們不能直接知道，要藉由(圖一)的混合分配推導，其結果如下:</h4>
 			<br>
 			<figure>
-			<img src="images/p19.png" alt="feature importance" width="400" height="200">
- 			<figcaption>(圖十) Likelihood of Y</figcaption>
+			<img src="images/p20.png" alt="feature importance" width="400" height="200">
+ 			<figcaption>(圖十一) Likelihood of Y</figcaption>
 			</figure>
             <br>
 			
