--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					<p>2.擁有網頁系統開發、撰寫與建立的經驗。</p>
                     <br>
 					<h3>學歷</h3>
-					<p> 國立中正大學 數學系 、 統計科學研究所 畢業。</p>
+					<p> 國立中正大學 數學系統計科學碩士班 畢業。</p>
                 </div>
             </div>
         </div>
@@ -62,7 +62,7 @@
 					    <h2>工作經歷</h2>
                         <div class="timeline-date">2024/08 - 2025/01</div>
                         <div class="timeline-content">
-                            <h3>智慧製造工程師</h3>
+                            <h3>工程師</h3>
                             <h4>友達光電科技股份有限公司</h4>
 
                             <!-- 系統一 -->
