--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					<p>2.擁有網頁系統開發、撰寫與建立的經驗。</p>
                     <br>
 					<h3>學歷</h3>
-					<p> 國立中正大學 數學系統計科學碩士班 畢業。</p>
+					<p> 國立中正大學 數學系 、 統計科學研究所 畢業。</p>
                 </div>
             </div>
         </div>
@@ -62,7 +62,7 @@
 					    <h2>工作經歷</h2>
                         <div class="timeline-date">2024/08 - 2025/01</div>
                         <div class="timeline-content">
-                            <h3>工程師</h3>
+                            <h3>智慧製造工程師</h3>
                             <h4>友達光電科技股份有限公司</h4>
 
                             <!-- 系統一 -->
@@ -214,7 +214,7 @@
                     <a href="project_explanation_1.html" target="_blank">查看詳細解釋</a>
                 </div>
 				
-		<!-- 專案 2 -->
+				<!-- 專案 2 -->
                 <div class="project-card">
                     <img src="images/titanic.jpg" alt="專案 2 圖片">
                     <h3>鐵達尼存活預測</h3>
@@ -223,8 +223,8 @@
 					<br> <!-- 加入一個換行 -->
                     <a href="project_explanation_2.html" target="_blank">查看詳細解釋</a>
                 </div>
-
-	        <!-- 專案 5 -->
+				
+				<!-- 專案 5 -->
                 <div class="project-card">
                     <img src="images/insurance.jpg" alt="專案 5 圖片">
                     <h3>混合型分配應用(I): 在保險理賠建模中，從理論到風險定價。</h3>
@@ -234,12 +234,12 @@
                     <a href="project_explanation_5.html" target="_blank">查看詳細解釋</a>
                 </div>
 
-                <!-- 專案 4 -->
+            <!-- 專案 4 -->
                 <div class="project-card">
                     <img src="images/finace.jpg" alt="專案 4 圖片">
                     <h3>台積電資料爬蟲與預測</h3>
-                    <p>開發一個基於 yfinace 的網頁應用，每日監測台積電股票的漲跌與預測未來的行為(因為Github流量限制，只在每天18:00更新)。</p>
-                    <a href="https://adsf98171.github.io/Self_Stock_Website/" target="_blank">查看網頁</a>
+                    <p>開發一個基於 yfinace 的網頁應用，即時監測台積電股票的漲跌與預測未來的行為。</p>
+                    <a href="https://adsf98171.github.io/Self_Stock_Website/" target="_blank">查看程式碼</a>
 				    <br> <!-- 加入一個換行 -->
                     <a href="project_explanation_4.html" target="_blank">查看詳細解釋</a>
                 </div>
@@ -249,7 +249,7 @@
                     <img src="images/GPT.jpg" alt="專案 3 圖片">
                     <h3>生成式AI</h3>
                     <p>微調(fine-tune)大型語言模型 (LLM)，並且結合RAG，嘗試開發擁有專業能力的生成式AI。</p>
-                    <a href="https://colab.research.google.com/drive/1cMhq0BBqpoxHssaVzfOVleQoUMsMkkHQ#scrollTo=bf458a77-a36f-478b-84f0-b6dbe873d92d" target="_blank">查看程式碼</a>
+                    <a href="https://github.com/adsf98171/Portfolio/blob/main/Fine_tuning_a_LLM_3.ipynb" target="_blank">查看程式碼</a>
 					<br> <!-- 加入一個換行 -->
                     <a href="project_explanation_3.html" target="_blank">查看詳細解釋</a>
                 </div>
@@ -278,22 +278,21 @@
     <section id="message" class="section">
         <div class="container">
             <h2>留言板</h2>
-	    <p style="text-align: center;">(有問題歡迎留言，訊息將會發送到我的email)</p>
             <div class="message-form-container">
-                <form action="https://formspree.io/f/xqapwkzn" method="POST" class="message-form">
+                <form action="https://formspree.io/f/您的formspree代碼" method="POST" class="message-form">
                     <div class="form-group">
-                        <label for="name">Your name: </label>
+                        <label for="name">姓名</label>
                         <input type="text" id="name" name="name" required>
                     </div>
                     <div class="form-group">
-                        <label for="email">Your email: </label>
+                        <label for="email">Email</label>
                         <input type="email" id="email" name="email" required>
                     </div>
                     <div class="form-group">
-                        <label for="message">Your message: </label>
+                        <label for="message">留言內容</label>
                         <textarea id="message" name="message" rows="5" required></textarea>
                     </div>
-                    <button type="submit" class="submit-btn">Send</button>
+                    <button type="submit" class="submit-btn">送出留言</button>
                 </form>
             </div>
         </div>
