--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
         <div class="container">
             <h2>留言板</h2>
             <div class="message-form-container">
-                <form action="https://formspree.io/f/您的formspree代碼" method="POST" class="message-form">
+                <form action="https://formspree.io/f/xqapwkzn" method="POST" class="message-form">
                     <div class="form-group">
                         <label for="name">姓名</label>
                         <input type="text" id="name" name="name" required>
