--- a/index.html
+++ b/index.html
@@ -228,7 +228,8 @@
                 <div class="project-card">
                     <img src="images/insurance.jpg" alt="專案 5 圖片">
                     <h3>混合型分配應用(I): 在保險理賠建模中，從理論到風險定價。</h3>
-                    <p>本篇比較偏理論，內容是: 使用混合型分配解決保單右設限與自負額的理賠建模問題，並計算合理保費。</p>
+                    <p>本篇比較偏理論，內容是: 使用混合型分配解決保單右設限與自負額的理賠建模問題，並計算最佳的理賠上限，以規劃合理保費。</p>
+		    <p>目的在於，使用一個例子，實現統計學習的底層計算。</p>
                     <a href="https://github.com/adsf98171/Portfolio/blob/main/Fine_tuning_a_LLM_3.ipynb" target="_blank">查看程式碼</a>
 					<br> <!-- 加入一個換行 -->
                     <a href="project_explanation_5.html" target="_blank">查看詳細解釋</a>
@@ -301,7 +302,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 個人作品集. All rights reserved.</p>
+            <p>&copy; 2025 個人作品集. All rights reserved.</p>
         </div>
     </footer>
 
