--- a/index.html
+++ b/index.html
@@ -234,6 +234,17 @@
 					<br> <!-- 加入一個換行 -->
                     <a href="project_explanation_5.html" target="_blank">查看詳細解釋</a>
                 </div>
+		    
+		<!-- 專案 6 -->
+                <div class="project-card">
+                    <img src="images/yolo.png" alt="專案 6 圖片">
+                    <h3>影像辨識: YOLO(You Only Look Once)</h3>
+                    <p>這篇專案，嘗試手刻一個簡單的YOLO模型，以生成的1000筆O和X的資料進行訓練，再以另外20筆額外資料進行預測，實現基本的YOLO理論。</p>
+					<br>
+                    <a href="https://github.com/adsf98171/Portfolio/blob/main/Fine_tuning_a_LLM_3.ipynb" target="_blank">查看程式碼</a>
+					<br> <!-- 加入一個換行 -->
+                    <a href="project_explanation_6.html" target="_blank">查看詳細解釋</a>
+                </div>
 
             <!-- 專案 4 -->
                 <div class="project-card">
