--- a/index.html
+++ b/index.html
@@ -209,28 +209,28 @@
                     <h3>房價預測模型</h3>
 <!--					<h3 style="color: darkblue;">房價預測模型</h3> -->
                     <p>使用 Simple Regression、 Random Forest、 XGBoost 預測房價，最後使用DNN(深度神經網絡)進一步提升預測能力，並以shap增加解釋能力。</p>
-                    <a href="https://github.com/adsf98171/Portfolio/blob/main/boston_house_prediction.ipynb" target="_blank">查看程式碼</a>
+                    <a href="https://github.com/adsf98171/Portfolio/blob/main/boston_house_prediction.ipynb" target="_blank">參考程式碼</a>
 					<br> <!-- 加入一個換行 -->
                     <a href="project_explanation_1.html" target="_blank">查看詳細解釋</a>
                 </div>
 				
-				<!-- 專案 2 -->
+		<!-- 專案 2 -->
                 <div class="project-card">
                     <img src="images/titanic.jpg" alt="專案 2 圖片">
                     <h3>鐵達尼存活預測</h3>
                     <p>使用 Logistic Regression、 Random Forest、 XGBoost 預測是否存活，最後使用DNN(深度神經網絡)看看是否能增加分類能力。</p>
-                    <a href="https://github.com/adsf98171/Portfolio/blob/main/Titanic_prediction.ipynb" target="_blank">查看程式碼</a>
+                    <a href="https://github.com/adsf98171/Portfolio/blob/main/Titanic_prediction.ipynb" target="_blank">參考程式碼</a>
 					<br> <!-- 加入一個換行 -->
                     <a href="project_explanation_2.html" target="_blank">查看詳細解釋</a>
                 </div>
 				
-				<!-- 專案 5 -->
+		<!-- 專案 5 -->
                 <div class="project-card">
                     <img src="images/insurance.jpg" alt="專案 5 圖片">
                     <h3>混合型分配應用(I): 在保險理賠建模中，從理論到風險定價。</h3>
                     <p>本篇比較偏理論，內容是: 使用混合型分配解決保單右設限與自負額的理賠建模問題，並計算最佳的理賠上限，以規劃合理保費。</p>
 		    <p>目的在於，使用一個例子，實現統計學習的底層計算。</p>
-                    <a href="https://github.com/adsf98171/Portfolio/blob/main/Fine_tuning_a_LLM_3.ipynb" target="_blank">查看程式碼</a>
+                    <a href="https://github.com/adsf98171/Portfolio/blob/main/Fine_tuning_a_LLM_3.ipynb" target="_blank">參考程式碼</a>
 					<br> <!-- 加入一個換行 -->
                     <a href="project_explanation_5.html" target="_blank">查看詳細解釋</a>
                 </div>
@@ -238,10 +238,10 @@
 		<!-- 專案 6 -->
                 <div class="project-card">
                     <img src="images/yolo.png" alt="專案 6 圖片">
-                    <h3>影像辨識: YOLO(You Only Look Once)</h3>
+                    <h3>影像辨識: YOLO(You Only Look Once)(待修改)</h3>
                     <p>這篇專案，嘗試手刻一個簡單的YOLO模型，以生成的1000筆O和X的資料進行訓練，再以另外20筆額外資料進行預測，實現基本的YOLO理論。</p>
 					<br>
-                    <a href="https://github.com/adsf98171/Portfolio/blob/main/Fine_tuning_a_LLM_3.ipynb" target="_blank">查看程式碼</a>
+                    <a href="https://github.com/adsf98171/Portfolio/blob/main/SELF_YOLO_ALL_LABEL.ipynb" target="_blank">參考程式碼</a>
 					<br> <!-- 加入一個換行 -->
                     <a href="project_explanation_6.html" target="_blank">查看詳細解釋</a>
                 </div>
@@ -251,7 +251,7 @@
                     <img src="images/finace.jpg" alt="專案 4 圖片">
                     <h3>台積電資料爬蟲與預測</h3>
                     <p>開發一個基於 yfinace 的網頁應用，即時監測台積電股票的漲跌與預測未來的行為。</p>
-                    <a href="https://adsf98171.github.io/Self_Stock_Website/" target="_blank">查看程式碼</a>
+                    <a href="https://adsf98171.github.io/Self_Stock_Website/" target="_blank">參考程式碼</a>
 				    <br> <!-- 加入一個換行 -->
                     <a href="project_explanation_4.html" target="_blank">查看詳細解釋</a>
                 </div>
@@ -259,9 +259,9 @@
             <!-- 專案 3 -->
                 <div class="project-card">
                     <img src="images/GPT.jpg" alt="專案 3 圖片">
-                    <h3>生成式AI</h3>
+                    <h3>生成式AI(待修改)</h3>
                     <p>微調(fine-tune)大型語言模型 (LLM)，並且結合RAG，嘗試開發擁有專業能力的生成式AI。</p>
-                    <a href="https://github.com/adsf98171/Portfolio/blob/main/Fine_tuning_a_LLM_3.ipynb" target="_blank">查看程式碼</a>
+                    <a href="https://github.com/adsf98171/Portfolio/blob/main/Fine_tuning_a_LLM_3.ipynb" target="_blank">參考程式碼</a>
 					<br> <!-- 加入一個換行 -->
                     <a href="project_explanation_3.html" target="_blank">查看詳細解釋</a>
                 </div>
