--- a/project_explanation_3.html
+++ b/project_explanation_3.html
@@ -210,9 +210,13 @@
 			<br>
 			<p>2. 又或者，對生成參數強化，比如: 降低隨機性(temperature)，或者建立一些生成的限制(generation_args)，比如: "forced_words"和"bad_word"。</p>
 			<br>
+			<p>3. 添加更多重複的topics，但以不同的內容回答，這樣在驗證時才能保證有學到該問題的訊息。比如說: linear_regression的definitions有least Squared estimate、 Y=βX+ε；applications有house predict、 trend analysis之類的，
+			      每個核心概念提供好幾種種不同描述方式,這樣有助於模型的泛化能力提升，再藉由損失函數，給同概念的答案向量相似度(cosine_similarity...)懲罰，使得同概念輸出更穩定。</p>
+			<br>
 			
             <h3>結論</h3>
-            <p>這個專案，展示了如何微調一個GPT-2模型，讓它可以回答更專業的問題。以這個問題來說，我們仍需要'術語校對'和'數學嚴謹性強化'，進一步提升回答品質。我認為應該優先修正訓練數據中的技術表答(錯誤 vs 正確的對照樣本)。</p>
+            <p>這個專案，用一筆簡單的資料，展示了如何微調一個GPT-2模型，讓它可以回答更專業的問題。以這個問題來說，我們仍需要'術語校對'和'數學嚴謹性強化'，進一步提升回答品質。我認為應該優先修正訓練數據中的技術表答(錯誤 vs 正確的對照樣本)。
+			   不過其實這有個小問題，就是我們應該需要更多樣本，且增加具有重複效果，但不同方式描述的語句，不然輸出的語句即使與輸入的完全相同，那也沒關係的話，那其實就失去"驗證"的意義。</p>
         </section>
     </div>
 
