--- a/project_explanation_3.html
+++ b/project_explanation_3.html
@@ -217,7 +217,7 @@
             <h3>結論</h3>
             <p>這個專案，用一筆簡單的資料，展示了如何微調一個GPT-2模型，讓它可以回答更專業的問題。以這個問題來說，我們仍需要'術語校對'和'數學嚴謹性強化'，進一步提升回答品質。我認為應該優先修正訓練數據中的技術表答(錯誤 vs 正確的對照樣本)。</p>
 	    <br>
-	    <p>另外，其實這裡有個小問題，就是我們應該需要更多樣本，且增加具有重複效果，但不同方式描述的語句，不然輸出的語句即使與輸入的完全相同，那也沒關係的話，那其實就失去"驗證"的意義。</p>
+	    <p>另外，其實這裡有個小問題，就是我們應該需要更多樣本，且增加具有重複效果，但不同方式描述的語句，不然輸出的語句即使與輸入的完全相同，那也沒關係的話，那其實就失去"驗證"的意義；此外，被分類到test 的部份，模型也學不到它們的訊息。</p>
         </section>
     </div>
 
