--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                     <img src="images/GPT.jpg" alt="專案 3 圖片">
                     <h3>生成式AI(待修改)</h3>
                     <p>微調(fine-tune)大型語言模型 (LLM)，並且結合RAG，嘗試開發擁有專業能力的生成式AI。</p>
-                    <a href="https://github.com/adsf98171/Portfolio/blob/main/Fine_tuning_a_LLM_3.ipynb" target="_blank">參考程式碼</a>
+                    <a href="https://colab.research.google.com/drive/1CnRT5HbehZKOsoqk2x1QrLwNWNLQ3fsI#scrollTo=eokvzb-QctDK" target="_blank">參考程式碼</a>
 					<br> <!-- 加入一個換行 -->
                     <a href="project_explanation_3.html" target="_blank">查看詳細解釋</a>
                 </div>
