--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
 				    <li>C++</li>
                     <li>Python (Scikit-Learn、PyTorch、TensorFlow)</li>
                     <li>Web 開發 (Flask、FastAPI)</li>
+		    <li>AI / 軟體開發 (Git、Github、Docker)</li>
                     <li>資料庫 (MySQL、SQL Server)、自動化數據處理</li>
                 </ul>
             </div>
