--- a/project_explanation_6.html
+++ b/project_explanation_6.html
@@ -365,6 +365,64 @@
 			   precision 會急劇下降，每一階梯代表模型預測框的一個群組被納入計算，然後 precision 被拉低。</p>
 			<br>
 			<p>接下來我可能考慮生成更大的圖片，比如128x128，並且增加resize的比例，因為這64x64裡面的X/O有些甚至才2x2、3x3，這麼小的畫素並不適合YOLO，也不像一個完整的圖案，而且resize放大後不要超出邊界，這樣模型訓練也會更簡單。</p>
+			<br>
+			
+			<h4>11. resize data:</h4>
+			<ul>
+			<p>根據上面的結果，我們進行以下調整:</p>
+			<ul>
+			<p>1. 將64x64改為128x128；</p>
+			<p>2. 將隨機地scale 圖形，30%放大2~2.5倍、40%放大2.5~3倍以及30%放大3~3.5倍；</p>
+			<p>3. 太靠邊會截斷圖案的圖片不要，同樣補到100張。</p>
+			</ul>
+			<p>我們重複訓練30次(epoch=30)，挑出最好的模型，畫出PR curve:</p>
+			</ul>
+			<br>
+			<div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; margin: 30px 0;">
+  			<!-- 左圖：PR Curve -->
+  			<figure style="flex: 1 1 45%; min-width: 300px; margin: 0; text-align: center;">
+    			<img src="images/p41.png" alt="Precision-Recall Curve" style="width: 100%; height: auto; max-height: 500px; object-fit: contain;">
+    			<figcaption style="font-size: 1.1em; padding: 10px; background: #f5f5f5; border-radius: 5px;">(圖十一) PR Curve</figcaption>
+ 			 </figure>
+  
+ 			 <!-- 右圖：F1 vs Confidence -->
+ 			 <figure style="flex: 1 1 45%; min-width: 300px; margin: 0; text-align: center;">
+ 			   <img src="images/p42.png" alt="F1-Confidence Curve" style="width: 100%; height: auto; max-height: 500px; object-fit: contain;">
+  			  <figcaption style="font-size: 1.1em; padding: 10px; background: #f5f5f5; border-radius: 5px;">(圖十二) F1 vs Confidence</figcaption>
+  			</figure>
+			</div>
+			<br>
+			<p>1. 左邊的圖代表AP和mAP(面積)都9成以上，表示分類能力已經非常高了，但對於X是低了一點，也就是說，有些X可能被認為是背景或O，這可以由confusion matrix看出(圖十三)；</p>
+			<p>2. 右邊的圖代表從0~0.5左右，F1都維持在0.95，意思是: 不論信心度多低，recall和precision都很高，並且保持一個trade-off，也就是說: 不論信心度多低，都可以抓到正確的東西(高recall)，以及很好的過濾到有問題的眶，使得模型不會亂抓(高precision)；</p>
+			<p>3. 所以，在這裡，找一個使F1 最大的conf threshold，就找0~0.5之中的任一個點都可以，其實實務上就是找一個可以讓F1 最大的conf，或者precison ≈ recall 的交點；</p>
+			<p>4. 然後當conf > 0.5，很多框都不見(所以抓不到東西)，那recall 就下降，就像下面的(圖十三)，整體來說，F1就變低。</p>
+			<br>
+			<figure>
+			<img src="images/p43.png" alt="feature importance" width="900" height="500">
+ 			<figcaption>(圖十三) Recall vs Confidence</figcaption>
+			</figure>
+			<br>
+			<p>藉由(圖十一)，我們可以知道X 的分類筆O還要差一點(因為AP比較低)，所以我們可以看看confusion matrix:</p>
+			<br>
+			<figure>
+			<img src="images/p44.png" alt="feature importance" width="700" height="500">
+ 			<figcaption>(圖十四) confusion matrix</figcaption>
+			</figure>
+			<br>
+			<p>這張圖我們可以知道，有44張O和46張X，一共90張被分對，但是有10張X被分成"背景"，而這些背景沒有框，就沒被抓出，recall自然比較低。</p>
+			<br>
+			<p>最後，我們畫一些X 的結果出來看看，如(圖十五)，你會發現有些根本沒有被框出來(顯示一部分):</p>
+			<br>
+			<figure>
+			<img src="images/p45.png" alt="feature importance" width="700" height="500">
+ 			<figcaption>(圖十五) X 的預測結果</figcaption>
+			</figure>
+			<br>
+			</ul>
+			<br>
+			
+			<h3>結論:</h3>
+			<p>這裡我們使用模擬資料，訓練一個yolo 進行預測，當然實際情況一張圖片通常不會是黑白的，也不會在一張圖裡只有一個東西，可能一張圖裡有好幾個東西，比如:3個X、2個O之類的。 這裡只是我想講一些訓練YOLO 的方法，以及介紹一些指標，不需要搞得過於複雜，當然，實際上的YOLO不是那麼簡單，但藉由這個簡單的例子，我們可以比較容易了解它的基本理論。</p>
 			
         </section>
     </div>
