--- a/project_explanation_3.html
+++ b/project_explanation_3.html
@@ -215,9 +215,12 @@
 			<br>
 			
             <h3>結論</h3>
-            <p>這個專案，用一筆簡單的資料，展示了如何微調一個GPT-2模型，讓它可以回答更專業的問題。以這個問題來說，我們仍需要'術語校對'和'數學嚴謹性強化'，進一步提升回答品質。我認為應該優先修正訓練數據中的技術表答(錯誤 vs 正確的對照樣本)。</p>
-	    <br>
-	    <p>另外，其實這裡有個小問題，就是我們應該需要更多樣本，且增加具有重複效果，但不同方式描述的語句，不然輸出的語句即使與輸入的完全相同，那也沒關係的話，那其實就失去"驗證"的意義；此外，被分類到test 的部份，模型也學不到它們的訊息。</p>
+            <p>這個專案，用一筆簡單的資料，展示了如何微調一個GPT-2模型，讓它可以回答更專業的問題。以這個問題來說，我們仍需要'術語校對'和'數學嚴謹性強化'，進一步提升回答品質。修正訓練數據中的技術表答(錯誤 vs 正確的對照樣本)是一個方法。</p>
+	        <br>
+	        <p>另外，這裡有個小問題，就是我們應該需要更多樣本，且增加具有重複效果，但不同方式描述的語句，不然輸出的語句即使與輸入的完全相同，那也沒關係的話，那其實就失去"驗證"的意義；此外，被分類到test 的部份，模型也學不到它們的訊息。</p>
+		    <br>
+			<p>最後，我發現，這模型主要的問題還是樣本數不夠，通常應該需要500~1000筆，搞得太複雜，容易提升訓練難度與overfit，除了增加樣本數外，也該加入數據增強(同義詞替換、問題重述...)，使模型更generalize(泛化)；在這裡，<strong>BLEU</strong>(評估真實句子與生成句子好壞的指標)大約0.41，表示生成得句子基本是對，但有不準確之處，因此，與其增加複雜度，增加數據量的難度低、訓練成本低，且效率高(BLEU上升)。</p>
+
         </section>
     </div>
 
