--- a/index.html
+++ b/index.html
@@ -268,6 +268,19 @@
                 </div>
             </div>
         </div>
+	        <!-- 專案 7 -->
+                <div class="project-card">
+                    <img src="images/aiot.jpg" alt="專案 7 圖片">
+                    <h3>AIoT 模擬"智慧洗碗機"</h3>
+                    <p>這篇專案，嘗試以軟體模擬智慧洗碗機，以基本的IoT，為我們偵測水量異常、水電用量、水電成本等等，並且當洗碗精不夠，可以從另一個機器(雲端)適時補充洗碗精。</p>
+					<p>另外，我們也可以再用偵測資料進行異常預測，以達到AIoT的精神。</p>
+					<br>
+                    <a href="https://github.com/adsf98171/Portfolio/blob/main/AIoT.ipynb" target="_blank">參考程式碼</a>
+					<br> <!-- 加入一個換行 -->
+                    <a href="project_explanation_7.html" target="_blank">查看詳細解釋</a>
+                </div>
+            </div>
+        </div>
     </section>
 
 
