--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@
 	<section id="portfolio" class="section">
         <div class="container">
             <h2>作品集</h2>
+	    <h4 style="text-align: center;">以下的作品基本上不會太難理解，以實作簡單描述一些而熟能詳的理論，以及複雜的步驟與演算法，若讀者有任何建議，歡迎於下方留言板留言。</h4>
             <div class="portfolio-grid">
             <!-- 專案 1 -->
                 <div class="project-card">
