--- a/project_explanation_7.html
+++ b/project_explanation_7.html
@@ -183,7 +183,7 @@
  			 </figure>
 			<br>
 			
-			<p>藉由一些警報紀錄，比如: 異常用水量的資料，我們可以用一個Prohet 或LSTM model，分析之前水流數據與警報的關聯性，預測未來可能發生異常的時間點。如果有多種感測器（如振動、溫度），可用 因果推論模型（dowhy）找出警報的潛在原因。</p>
+			p>藉由一些警報紀錄，比如: 異常用水量的資料，我們可以用一個Prohet 或LSTM model，分析之前水流數據與警報的關聯性，預測未來可能發生異常的時間點。如果有多種感測器（如振動、溫度），可用 因果推論模型（dowhy）找出警報的潛在原因。還有，我們也可以使用Plotly，像股票預測那篇一樣，呈現出互動式圖表。</p>
             <br>
 			
             <h3>結論</h3>
